<resources>

    <string name="app_name">Weather Map</string>

    <!-- Splash Screen -->
    <string name="app_title">Weather Map</string>
    <string name="app_version">US Region Version</string>
    <string name="app_prompt">Tap to Proceed</string>
    <string name="user_file">user-data-wm.json</string>

    <!-- OpenWeatherMap API Key -->
    <string name="weathermap_owm_api_key">0bd12493a774213e924f4bc670f98f39</string>

    <!-- Menu Tab Labels -->
    <string name="tab_000">Today</string>
    <string name="tab_001">5 Days</string>
    <string name="tab_002">Options</string>

    <!-- Loading Messages -->
    <string name="loading_000">Loading, please wait...</string>
    <string-array name="loading_messages">
        <item>Observing the clouds...</item>
        <item>Looking for the umbrella...</item>
        <item>Applying sunscreen lotion...</item>
        <item>Putting on the raincoat...</item>
        <item>Warming up the mittens...</item>
    </string-array>

    <!-- Search Bar Panel -->
    <string name="searchBar_000">Enter a US town or city.</string>
    <string name="searchBar_001">Please input a proper US\ntown or city name.</string>
    <string name="searchBar_002">Search</string>

    <!-- Today's Weather Fragment -->
    <string name="today_000">City Name</string>
    <string name="today_000a">CL</string>
    <string name="today_001">Coordinates:</string>
    <string name="today_002">Weather:</string>
    <string name="today_002a">Main</string>
    <string name="today_002b">Description</string>
    <string name="today_003">Temperature:</string>
    <string name="today_004a">Minimum:</string>
    <string name="today_004b">Pressure:</string>
    <string name="today_005a">Maximum:</string>
    <string name="today_005b">Humidity:</string>
    <string name="today_006a">Wind Speed:</string>
    <string name="today_006b">Cloudiness:</string>
    <string name="today_007a">Sunrise:</string>
    <string name="today_007b">Sunset:</string>

    <!-- 5-Days Weather Fragment -->
    <string name="data_time">GMT</string>
    <string name="fiveDays_000">Date/Date/Date</string>
    <string name="fiveDays_001">Timestamp</string>
    <string name="fiveDays_002">Temperature</string>
    <string name="fiveDays_003a">Min.:</string>
    <string name="fiveDays_003b">Max.:</string>
    <string name="fiveDays_004a">Press.:</string>
    <string name="fiveDays_004b">Humid.:</string>
    <string name="fiveDays_005a">Cloud:</string>
    <string name="fiveDays_005b">Wind:</string>
    <string name="fiveDays_006">Holder</string>
    <string-array name="month_names">
        <item></item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!-- Welcome Panel -->
    <string name="welcome_000">Hello There!</string>
    <string name="welcome_001">Welcome to Weather Map!</string>

    <!-- Connection Error Panel -->
    <string name="connect_000">[ Connection Error ]</string>
    <string name="connect_001">* Connection not found.\nPlease try again.</string>

    <!-- Search Error Panel -->
    <string name="search_000">[ Search Error ]</string>
    <string name="search_001">* Could not find any results.\nPlease try again.</string>

    <!-- Options Fragment -->
    <string name="options_000">Title Screen</string>
    <string name="options_000_on">Turn off to skip the title screen the\nnext time the application is launched.</string>
    <string name="options_000_off">Turn on to view the title screen the\nnext time the application is launched.</string>
    <string name="options_001">Temperature</string>
    <string name="options_001_on">Switch to the Celsius degree units the\nnext time a weather data is being searched.</string>
    <string name="options_001_off">Switch to the Fahrenheit degree units the\nnext time a weather data is being searched.</string>
    <string name="options_002">Notifications</string>

    <string name="options_on">ON</string>
    <string name="options_off">OFF</string>
    <string name="options_on_a">\u00B0F</string>
    <string name="options_off_a">\u00B0C</string>

    <!-- Measurements -->
    <string name="measure_000a">\u00B0F</string>
    <string name="measure_000b">\u00B0C</string>
    <string name="measure_001a">hPa</string>
    <string name="measure_002a">%</string>
    <string name="measure_003a">meter/sec.</string>

    <!-- Credits -->
    <string name="credits_000">Weather Map - US Region Version</string>
    <string name="credits_001">Developer: Alvin Yan</string>
    <string name="credits_002">Powered by &#169; OpenWeatherMap Services.</string>
    <string name="credits_003">All Rights Reserved.</string>

</resources>
