<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Title Screen preference -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <Switch
                    android:id="@+id/optionSwitch_00"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/options_000"
                    android:textColor="#000000"
                    android:textOff="@string/options_off"
                    android:textOn="@string/options_on"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_alignParentRight="true"
                    android:textSize="27sp" />

            </RelativeLayout>

            <!-- Credits banner -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/creditText_00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/credits_000"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/creditText_01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/credits_001"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/creditText_02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/credits_002"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/creditText_03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/credits_003"
                    android:textSize="15sp"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
