<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/data_city"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="#000000"
                android:text="@string/today_000"/>

            <TextView
                android:id="@+id/data_country"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/today_000a"/>

        </LinearLayout>

        <TextView
            android:id="@+id/data_coordinates"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/today_001"/>
        
    </LinearLayout>

    <HorizontalScrollView
        android:fadeScrollbars="false"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <!-- Day 1 Forecast Report -->
            <ScrollView
                android:fadeScrollbars="false"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                
                <LinearLayout
                    android:id="@+id/report_01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#EFF3F9"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="25sp"
                        android:textColor="#000000"
                        android:text="@string/fiveDays_000"/>

                </LinearLayout>
            </ScrollView>

            <!-- Day 2 Forecast Report -->
            <ScrollView
                android:fadeScrollbars="false"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/report_02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="25sp"
                        android:textColor="#000000"
                        android:text="@string/fiveDays_000"/>

                </LinearLayout>
            </ScrollView>

            <!-- Day 3 Forecast Report -->
            <ScrollView
                android:fadeScrollbars="false"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/report_03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#EFF3F9"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="25sp"
                        android:textColor="#000000"
                        android:text="@string/fiveDays_000"/>

                </LinearLayout>
            </ScrollView>

            <!-- Day 4 Forecast Report -->
            <ScrollView
                android:fadeScrollbars="false"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/report_04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="25sp"
                        android:textColor="#000000"
                        android:text="@string/fiveDays_000"/>

                </LinearLayout>
            </ScrollView>

            <!-- Day 5 Forecast Report -->
            <ScrollView
                android:fadeScrollbars="false"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/report_05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#EFF3F9"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_05"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="25sp"
                        android:textColor="#000000"
                        android:text="@string/fiveDays_000"/>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>
